# E3SM

./: .clang-format  .gitignore  .gitmodules  README.md  test_parse.cpp
.devcontainer/: Dockerfile  devcontainer.json  eamxx-sa.json
.devcontainer/e3sm/: devcontainer.json
.devcontainer/eamxx-sa/: devcontainer.json
.devcontainer/eamxxsa/: devcontainer.json
.github/workflows/: e3sm-cime-gh-ci.yaml  e3sm-gh-ci-4xw-cime-tests.yml  e3sm-gh-ci-cime-tests.yml  e3sm-gh-ci-tools.yml  e3sm-gh-ci-w-cime-tests.yml  e3sm-gh-clang-format.yml  e3sm-gh-md-linter.yml  e3sm-gh-pages.yml  e3sm-gh-tools-mkatmsrffile-test.yml  eamxx-gh-ci-cime-tests.yml  eamxx-gh-ci-standalone.yml  eamxx_default_files.yml  ghas-matx-yaml  ghas-matx.yaml  ghas-test.yaml  markdown-linter.yml  test.yaml  tests.yml
cime_config/: config_inputdata.xml
cime_config/allactive/: config_compsets.xml
cime_config/machines/: config_machines.xml
cime_config/machines/cmake_macros/: gnu_singularity.cmake
components/eam/bld/: build-namelist
components/eam/cime_config/: config_component.xml  config_compsets.xml
components/eamxx/: CMakeLists.txt  mkdocs.yml
components/eamxx/cime_config/: eamxx_buildnml_impl.py  namelist_defaults_eamxx.xml
components/eamxx/cmake/: BuildCprnc.cmake
components/eamxx/scripts/: atm_manip.py  machines_specs.py
components/eamxx/src/: CMakeLists.txt
components/eamxx/src/diagnostics_core/: CMakeLists.txt  compute_block.hpp  diagnostic_base.hpp  eamxx_field_accessor.hpp  expression_parser.hpp  py_translator.hpp  pydiag.hpp  rpn_evaluator.hpp
components/eamxx/src/diagnostics_core/tests/: CMakeLists.txt  expression_parser_test.cpp
components/eamxx/src/physics/stochastic_forcing/: CMakeLists.txt  eamxx_skebs_process_interface.cpp  eamxx_skebs_process_interface.hpp  eamxx_sppt_process_interface.cpp  eamxx_sppt_process_interface.hpp
components/eamxx/src/physics/stochastic_forcing/tests/: CMakeLists.txt  stochastic_forcing_tests.cpp
components/emulator_comps/common/: CMakeLists.txt
components/emulator_comps/common/tests/unit/: CMakeLists.txt
components/emulator_comps/common/tests/unit/inference/: test_stub_backend.cpp
components/emulator_comps/docs/: index.md
docs/: index.md
share/util/: CMakeLists.txt  shr_const_mod.F90  shr_derived_mod.F90  shr_horiz_remap_mod.F90  shr_vcoarsen_mod.F90
(+269 files in other folders)
